--- a/index.html
+++ b/index.html
@@ -1,1 +1,34 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Tabbed Website</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <div class="tab-container">
+    <button class="tablink" onclick="openTab('about-me')">About Me</button>
+    <button class="tablink" onclick="openTab('about-company')">About Company</button>
+    <button class="tablink" onclick="openTab('contact')">Contact Info</button>
+  </div>
+
+  <div id="about-me" class="tab-content">
+    <h2>About Me</h2>
+    <p>This is information about me...</p>
+  </div>
+
+  <div id="about-company" class="tab-content">
+    <h2>About Company</h2>
+    <p>This is information about the company...</p>
+  </div>
+
+  <div id="contact" class="tab-content">
+    <h2>Contact Info</h2>
+    <p>Contact us at contact@example.com</p>
+  </div>
+
+  <script src="script.js"></script>
+</body>
+</html>
 
