--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <p>This is information about me...</p>
   </div>
 
-  <div id="about-company" class="tab-content">
+  <div id="about-company" class="tab-content active"> <!-- Added 'active' class here -->
     <h2>About Company</h2>
     <p>This is information about the company...</p>
   </div>
@@ -29,6 +29,9 @@
   </div>
 
   <script src="script.js"></script>
+  <script>
+    // JavaScript to set 'About Company' tab as active by default
+    document.getElementById('about-company').style.display = 'block';
+  </script>
 </body>
 </html>
-
