--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
   <div id="about-me" class="tab-content">
     <h2>About Me</h2>
     <p>This is information about me...</p>
+    <ul>
+      <li>I am passionate about web development.</li>
+      <li>I enjoy learning new technologies.</li>
+      <li>I love creating useful applications.</li>
+    </ul>
   </div>
 
   <div id="about-company" class="tab-content active"> <!-- Added 'active' class here -->
