--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </ul>
   </div>
 
-  <div id="about-company" class="tab-content active"> <!-- Added 'active' class here -->
+  <div id="about-company" class="tab-content">
     <h2>About Company</h2>
     <p>This is information about the company...</p>
   </div>
@@ -33,10 +33,5 @@
     <p>Contact us at contact@example.com</p>
   </div>
 
-  <script src="script.js"></script>
-  <script>
-    // JavaScript to set 'About Company' tab as active by default
-    document.getElementById('about-company').style.display = 'block';
-  </script>
 </body>
 </html>
