--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
   <div class="tab-container">
-    <button class="tablink" onclick="openTab('about-me')">About Me</button>
-    <button class="tablink" onclick="openTab('about-company')">About Company</button>
-    <button class="tablink" onclick="openTab('contact')">Contact Info</button>
+    <button class="tablink" data-tab="about-me">About Me</button>
+    <button class="tablink" data-tab="about-company">About Company</button>
+    <button class="tablink" data-tab="contact">Contact Info</button>
   </div>
 
   <div id="about-me" class="tab-content">
