--- a/index.html
+++ b/index.html
@@ -24,14 +24,37 @@
   </div>
 
   <div id="about-company" class="tab-content">
-    <h2>About Company</h2>
-    <p>This is information about the company...</p>
+  <h2>About Company</h2>
+  <img src="https://media2.giphy.com/media/v1.Y2lkPTc5MGI3NjExaWVheDRkOGllNHU5MXhnN2Nuc203Y3dsOGY1MGtjcDM0cGtuY29ndiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/cm5S2TitNby9O/giphy.webp" alt="Company Logo">
+  <p>This is information about the company...</p>
+  
+  <h3>Company Timeline</h3>
+  <div class="timeline">
+    <div class="event">
+      <h4>Year - Milestone</h4>
+      <p>Description of the milestone or event.</p>
+    </div>
+    <!-- Add more milestones as needed -->
   </div>
+  
+  <h3>Products/Services</h3>
+  <div class="product-grid">
+    <div class="product">
+      <img src="product1.jpg" alt="Product 1">
+      <p>Description of Product 1.</p>
+    </div>
+    <div class="product">
+      <img src="product2.jpg" alt="Product 2">
+      <p>Description of Product 2.</p>
+    </div>
+    <!-- Add more products as needed -->
+  </div>
+  
+  <h3>Company Culture</h3>
+  <img src="company-culture.gif" alt="Company Culture GIF">
+  <p>Description of company culture or another related message.</p>
+</div>
 
-  <div id="contact" class="tab-content">
-    <h2>Contact Info</h2>
-    <p>Contact us at contact@example.com</p>
-  </div>
 
   <script src="script.js"></script>
 </body>
