--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
   <h3>Products/Services</h3>
   <div class="product-grid">
     <div class="product">
-      <img src="product1.jpg" alt="Product 1">
+      <img src="https://www.bing.com/images/search?view=detailV2&ccid=Qh8MaVUc&id=62952495870198C26CEE49658200D07479AF44E1&thid=OIP.Qh8MaVUcoHDQfoeggbbXQgHaEo&mediaurl=https%3a%2f%2fget.wallhere.com%2fphoto%2fcity-cityscape-architecture-building-skyline-skyscraper-tower-HDR-USA-Chicago-metropolis-downtown-states-america-houses-skyscrapers-condominium-landmark-facade-urban-area-metropolitan-area-human-settlement-neighbourhood-residential-area-tower-block-715446.jpg&cdnurl=https%3a%2f%2fth.bing.com%2fth%2fid%2fR.421f0c69551ca070d07e87a081b6d742%3frik%3d4USveXTQAIJlSQ%26pid%3dImgRaw%26r%3d0&exph=1200&expw=1920&q=building&simid=608036601045397953&FORM=IRPRST&ck=1CE1D6F4A2CAFED245FE36B7245667DD&selectedIndex=0&itb=0" alt="Product 1">
       <p>Description of Product 1.</p>
     </div>
     <div class="product">
-      <img src="product2.jpg" alt="Product 2">
+      <img src="https://www.bing.com/images/search?view=detailV2&ccid=%2bAj8ge2l&id=EB03CAA1F7D5C31E58C9D9D7379DDB1085F8619D&thid=OIP.-Aj8ge2lcqg_Knym2ctRyQHaJz&mediaurl=https%3a%2f%2fsawasdee.thaiairways.com%2fwp-content%2fuploads%2f2022%2f08%2fhires-AdobeStock_509329836-resize-680x900.jpg&cdnurl=https%3a%2f%2fth.bing.com%2fth%2fid%2fR.f808fc81eda572a83f2a7ca6d9cb51c9%3frik%3dnWH4hRDbnTfX2Q%26pid%3dImgRaw%26r%3d0&exph=900&expw=680&q=building&simid=608040535221931742&FORM=IRPRST&ck=5C1AB7CCD105E88770512CB305EDF5B0&selectedIndex=5&itb=0" alt="Product 2">
       <p>Description of Product 2.</p>
     </div>
     <!-- Add more products as needed -->
