--- a/index.html
+++ b/index.html
@@ -31,10 +31,28 @@
   <h3>Company Timeline</h3>
   <div class="timeline">
     <div class="event">
-      <h4>Year - Milestone</h4>
-      <p>Description of the milestone or event.</p>
+      <div class="event-date">2020</div>
+      <div class="event-description">
+        <h3>Company Founding</h3>
+        <p>The company was founded with a vision to innovate in the tech industry.</p>
+      </div>
     </div>
-    <!-- Add more milestones as needed -->
+    
+    <div class="event">
+      <div class="event-date">2021</div>
+      <div class="event-description">
+        <h3>New Product Launch</h3>
+        <p>We launched our flagship product, achieving significant market penetration.</p>
+      </div>
+    </div>
+    
+    <div class="event">
+      <div class="event-date">2022</div>
+      <div class="event-description">
+        <h3>Expansion to Global Markets</h3>
+        <p>Opened new offices in Europe and Asia to cater to growing international demand.</p>
+      </div>
+    </div>
   </div>
   
   <h3>Products/Services</h3>
