--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
   <p>This is information about the company...</p>
   
   <h3>Company Timeline</h3>
-  <div class="timeline">
+ <div class="timeline">
     <div class="event">
-      <div class="event-date">2020</div>
+      <span class="event-date">2020</span>
       <div class="event-description">
         <h3>Company Founding</h3>
         <p>The company was founded with a vision to innovate in the tech industry.</p>
@@ -39,7 +39,7 @@
     </div>
     
     <div class="event">
-      <div class="event-date">2021</div>
+      <span class="event-date">2021</span>
       <div class="event-description">
         <h3>New Product Launch</h3>
         <p>We launched our flagship product, achieving significant market penetration.</p>
@@ -47,13 +47,14 @@
     </div>
     
     <div class="event">
-      <div class="event-date">2022</div>
+      <span class="event-date">2022</span>
       <div class="event-description">
         <h3>Expansion to Global Markets</h3>
         <p>Opened new offices in Europe and Asia to cater to growing international demand.</p>
       </div>
     </div>
   </div>
+
   
   <h3>Products/Services</h3>
   <div class="product-grid">
