--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div class="event">
       <span class="event-date">2022</span>
       <div class="event-description">
-        <h3>Expansion to Global Markets</h3>
+        <h3>Expansion</h3>
         <p>Opened new offices in Europe and Asia to cater to growing international demand.</p>
       </div>
     </div>
