--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <div id="about-company" class="tab-content">
   <h2>About Company</h2>
-  <img src="https://media2.giphy.com/media/v1.Y2lkPTc5MGI3NjExaWVheDRkOGllNHU5MXhnN2Nuc203Y3dsOGY1MGtjcDM0cGtuY29ndiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/cm5S2TitNby9O/giphy.webp" alt="Company Logo">
+  <img src="https://i.pinimg.com/originals/44/16/b6/4416b655963cc0cb4e98e72e9d16357d.gif" alt="Company Logo">
   <p>This is information about the company...</p>
   
   <h3>Company Timeline</h3>
