--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
   
   <h3>Products/Services</h3>
   <div class="product-grid">
-    <div class="product">
+    <div class="product1">
       <img src="https://th.bing.com/th/id/R.c01549258ae3f84e27b99adbcec4fd08?rik=iTE%2bIww97EY7qQ&riu=http%3a%2f%2fmedia.architecturaldigest.com%2fphotos%2f576da9fe5ea3e586576ec4b2%2fmaster%2fpass%2fbest-tall-buildings-2016-03.jpg&ehk=4KMtiLvw6JmHQZTsBmKWJWJMkJ5m749FHJeE%2bY9I6fM%3d&risl=1&pid=ImgRaw&r=0" alt="Product 1">
       <p>Description of Product 1.</p>
     </div>
-    <div class="product">
+    <div class="product2">
       <img src="https://th.bing.com/th/id/OIP.3hXuWUQwB8V8JWWW1hwewQHaLH?rs=1&pid=ImgDetMain" alt="Product 2">
       <p>Description of Product 2.</p>
     </div>
